Project templates, blog changes

--- a/_posts/2014-07-01-blah.md
+++ b/_posts/2014-07-01-blah.md
@@ -2,5 +2,7 @@
 title: First post
 layout: blog
 comments: true
+category: miscellaneous
+tags: ["Github Pages", "Jekyll", "Liquid"]
 ---
 First post, more to come!
