Switch to type from layout

--- a/_posts/2009-09-01-artisan.md
+++ b/_posts/2009-09-01-artisan.md
@@ -1,5 +1,6 @@
 title: Artisan
 layout: project
+type: project
 category: game development
 pictures: [artisan1.jpg, artisan2.jpg, artisan3.jpg, artisan4.jpg, artisan5.jpg]
 tags: [iOS, "Objective-C", "OpenGL-ES"]
