--- a/_posts/2013-06-01-steps.md
+++ b/_posts/2013-06-01-steps.md
@@ -1,6 +1,7 @@
 ---
 title: A Piezoelectric Energy-Harvesting Shoe System for Podiatric Sensing
 layout: project
+type: project
 category: electrical engineering
 pictures: [steps.png]
 class: OSU Capstone, accepted to EMBC '14
