--- a/_posts/2013-06-01-the-wave.md
+++ b/_posts/2013-06-01-the-wave.md
@@ -1,6 +1,7 @@
 ---
 title: The Wave
 layout: project
+type: project
 category: web development
 pictures: [wave1.png, wave2.png, wave3.png]
 tags: ["HTML/CSS", "Javascript", "Java Servlets", Facebook]
