--- a/_posts/2014-07-01-blah.md
+++ b/_posts/2014-07-01-blah.md
@@ -1,6 +1,7 @@
 ---
 title: First post
 layout: blog
+type: blog
 comments: true
 category: miscellaneous
 tags: ["Github Pages", "Jekyll", "Liquid"]
