--- a/_posts/2011-05-01-taskoid.md
+++ b/_posts/2011-05-01-taskoid.md
@@ -1,6 +1,7 @@
 ---
 title: Taskoid
 layout: project
+type: project
 category: web development
 pictures: [taskoid.png]
 tags: ["HTML/CSS", Javascript, PHP, MySQL]
