Update resume slightly, some pages

--- a/_posts/2016-05-01-uarch.md
+++ b/_posts/2016-05-01-uarch.md
@@ -11,7 +11,7 @@ links: { paper: "papers/uarch.pdf" }
 Our major design objective was to create a somewhat realistic, in-order, x86
 processor. Since it was in-order, maximizing MLP and leveraging locality (to
 improve latency) was of utmost importance. Thus we put in features such as:
-multiple MSHRs, a Store and Eviction Bu↵er, Critical-word first, and Memory
+multiple MSHRs, a Store and Eviction Buffer, Critical-word first, and Memory
 Banks with Row bu↵ers. Additionally, in order to ensure instruction throughput,
 we added a branch predictor, instruction queue, a banked register file, and
 data forwarding (with scoreboarding).
